cambios en pom.xml y application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-server.port=8080
+server.port=8081
 
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/desi_2023?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/desi2023profe
 spring.datasource.username=root
-spring.datasource.password=tsti
-
-
-
+spring.datasource.password=n0m3n35tnum3n
